Update V2 flow and configs

--- a/v1/ldap_auth/manifest.json
+++ b/v1/ldap_auth/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "ldap_auth",
   "name": "LDAP Auth Helper (command_line)",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "documentation": "https://www.home-assistant.io/docs/authentication/providers/",
-  "issue_tracker": "https://example.invalid/issues",
+  "issue_tracker": "https://github.com/stefandmn/ldap_auth/issues",
   "codeowners": [],
-  "requirements": ["ldap3==2.9.1"],
+  "requirements": [],
   "iot_class": "local_polling"
 }
