small updates after integration tests

--- a/v2/ldap_auth/services.yaml
+++ b/v2/ldap_auth/services.yaml
@@ -1,8 +1,6 @@
 show_auth_provider_snippet:
   name: Show auth provider YAML snippet
-  description: >
-    Creates a persistent notification with the YAML required to enable the command_line auth provider.
-    Optionally writes /config/ldap_auth_providers.yaml for use with !include.
+  description: Creates a persistent notification with the YAML required to enable the command_line auth provider. Optionally writes /config/ldap_auth_providers.yaml for use with !include.
   fields:
     write_file:
       name: Write include file
