--- a/v2/ldap_auth/manifest.json
+++ b/v2/ldap_auth/manifest.json
@@ -1,10 +1,10 @@
 {
   "domain": "ldap_auth",
-  "name": "LDAP Auth Helper (command_line)",
-  "version": "2.0.1",
+  "name": "LDAP Auth Helper",
+  "version": "2.0.2",
   "documentation": "https://www.home-assistant.io/docs/authentication/providers/",
   "issue_tracker": "https://github.com/stefandmn/ldap_auth/issues",
-  "codeowners": [],
+  "codeowners": ["@stefandmn"],
   "requirements": [],
   "iot_class": "local_push",
   "config_flow": true
