--- a/v2/ldap_auth/services.yaml
+++ b/v2/ldap_auth/services.yaml
@@ -1,5 +1,5 @@
-show_auth_provider_snippet:
-  name: Show auth provider YAML snippet
+show_auth_provider_include:
+  name: Show auth provider YAML include
   description: Creates a persistent notification with the YAML required to enable the command_line auth provider. Optionally writes /config/ldap_auth_providers.yaml for use with !include.
   fields:
     write_file:
